[tool.poetry]
name = "pygpt-net"
version = "2.5.0"
description = "Desktop AI Assistant powered by models: OpenAI o1, GPT-4o, GPT-4, GPT-4 Vision, GPT-3.5, DALL-E 3, Llama 3, Mistral, Gemini, Claude, Bielik, and other models supported by Langchain, Llama Index, and Ollama. Features include chatbot, text completion, image generation, vision analysis, speech-to-text, internet access, file handling, command execution and more."
authors = ["Marcin Szczyglinski <info@pygpt.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://pygpt.net"
repository = "https://github.com/szczyglis-dev/py-gpt"
documentation = "https://pygpt.readthedocs.io/"
keywords = ["py_gpt", "py-gpt", "pygpt", "desktop", "app", "o1", "gpt", "gpt4", "gpt-4o", "gpt-4v", "gpt3.5", "gpt-4", "gpt-4-vision", "gpt-3.5", "llama3", "mistral", "gemini", "bielik", "claude", "tts", "whisper", "vision", "chatgpt", "dall-e", "chat",
    "chatbot", "assistant", "text completion", "image generation", "ai", "api", "openai", "api key", "langchain", "llama-index", "ollama", "presets", "ui", "qt", "pyside"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
packages = [
    { from = "src", include = "pygpt_net" },
]
include = [
	"CHANGELOG.md",
	"icon.png",
	"README.md",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
beautifulsoup4 = "^4.12.3"
chromadb = "^0.5.17"
croniter = "^2.0.1"
docker = "^7.0.0"
docx2txt = "^0.8"
google-generativeai = "^0.8.3"
EbookLib = "^0.18"
httpx = "^0.27.2"
httpx-socks = "^0.9.2"
ipykernel = "^6.29.5"
jupyter_client = "^8.6.3"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchain-experimental = "^0.0.64"
langchain-openai = "^0.1.22"
llama-index = "^0.12.11"
llama-index-agent-openai = "^0.4.2"
llama-index-core = "0.12.11"
llama-index-embeddings-azure-openai = "^0.3.0"
llama-index-embeddings-gemini = "^0.3.1"
llama-index-embeddings-huggingface-api = "^0.3.0"
llama-index-embeddings-ollama = "^0.5.0"
llama-index-embeddings-openai = "^0.3.1"
llama-index-llms-anthropic = "^0.6.3"
llama-index-llms-azure-openai = "^0.3.0"
llama-index-llms-deepseek = "^ 0.1.0"
llama-index-llms-gemini = "^0.4.3"
llama-index-llms-huggingface-api = "^0.3.1"
llama-index-llms-ollama = "^0.5.0"
llama-index-llms-openai = "^0.3.13"
llama-index-llms-openai-like = "^0.3.3"
llama-index-multi-modal-llms-openai = "^0.4.2"
llama-index-vector-stores-chroma = "^0.4.1"
llama-index-vector-stores-elasticsearch = "^0.4.0"
llama-index-vector-stores-pinecone = "^0.4.2"
llama-index-vector-stores-redis = "^0.4.0"
llama-index-readers-chatgpt-plugin = "^0.3.0"
llama-index-readers-database = "^0.3.0"
llama-index-readers-file = "^0.4.3"
llama-index-readers-github = "^0.5.0"
llama-index-readers-google = "^0.5.0"
llama-index-readers-microsoft-onedrive = "^0.3.0"
llama-index-readers-twitter = "^0.3.0"
llama-index-readers-web = "^0.3.3"
Markdown = "^3.7"
mss = "^9.0.2"
nbconvert = "^7.16.1"
openai = ">=1.55.1,<1.60.0"
opencv-python = "^4.9.0.80"
packaging = "^23.2"
pandas = "^2.2.0"
pillow = "^10.2.0"
pinecone-client = "^3.1.0"
PyAudio = "^0.2.14"
PyAutoGUI = "^0.9.54"
Pygments = "^2.18.0"
pydub = "^0.25.1"
pygame = "^2.5.2"
pypdf = "^5.1.0"
pynput = "^1.7.7"
pyserial = "^3.5"
PySide6 = "6.6.1"
python-markdown-math = "^0.8"
redis = "^5.0.1"
qt-material = "^2.14"
SpeechRecognition = "^3.10.1"
show-in-file-manager = "^1.1.4"
SQLAlchemy = "^2.0.27"
tiktoken = "^0.7.0"
wikipedia = "^1.4.0"
youtube-transcript-api = "^0.6.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.4.0"
pytest = "^7.4.3"

[tool.poetry.scripts]
pygpt = 'pygpt_net.app:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
