[tool.poetry]
name = "pygpt-net"
version = "2.7.4"
description = "Desktop AI Assistant powered by: OpenAI GPT-5, GPT-4, o1, o3, Gemini, Claude, Grok, DeepSeek, and other models supported by Llama Index, and Ollama. Chatbot, agents, completion, image generation, vision analysis, speech-to-text, plugins, MCP, internet access, file handling, command execution and more."
authors = ["Marcin Szczyglinski <info@pygpt.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://pygpt.net"
repository = "https://github.com/szczyglis-dev/py-gpt"
documentation = "https://pygpt.readthedocs.io/"
keywords = ["ai", "api", "api key", "app", "assistant", "bielik", "chat", "chatbot", "chatgpt", "claude", "dall-e", "deepseek", "desktop", "gemini", "gpt", "gpt-3.5", "gpt-4", "gpt-4-vision", "gpt-4o", "gpt-5", "gpt-oss", "gpt3.5", "gpt4", "grok", "langchain", "llama-index", "llama3", "mistral", "o1", "o3", "ollama", "openai", "presets", "py-gpt", "py_gpt", "pygpt", "pyside", "qt", "text completion", "tts", "ui", "vision", "whisper"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
packages = [
    { from = "src", include = "pygpt_net" },
]
include = [
	"CHANGELOG.md",
	"icon.png",
	"README.md",
]

[tool.poetry.urls]
Changelog = "https://github.com/szczyglis-dev/py-gpt/blob/master/CHANGELOG.md"
Issues = "https://github.com/szczyglis-dev/py-gpt/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
anthropic = "^0.75.0"
azure-core = "1.37.0"
beautifulsoup4 = "4.13.5"
charset-normalizer = ">=2.0,<3.2.0 || >3.2.0"
chromadb = "1.1.0"
croniter = "^2.0.7"
docker = "^7.1.0"
docx2txt = "^0.8"
ddgs = "^9.5.5"
EbookLib = "^0.18"
gkeepapi = "0.15.1"
google-api-python-client = "2.187.0"
google-genai = "^1.56.0"
grpcio = "1.75.0"
httpx = "0.28.1"
httpx-socks = "^0.10.1"
huggingface-hub = "0.35.0"
ipykernel = "^6.30.1"
jupyter_client = "^8.6.3"
llama-index = "0.14.10"
llama-index-core = "0.14.10"
llama-index-embeddings-azure-openai = "^0.4.1"
llama-index-embeddings-gemini = "^0.4.1"
llama-index-embeddings-google-genai = "^0.3.1"
llama-index-embeddings-huggingface-api = "^0.4.1"
llama-index-embeddings-mistralai = "^0.4.1"
llama-index-embeddings-ollama = "^0.8.5"
llama-index-embeddings-openai = "^0.5.1"
llama-index-embeddings-openai-like = "^0.2.2"
llama-index-embeddings-voyageai = "^0.5.2"
llama-index-llms-anthropic = "^0.10.4"
llama-index-llms-azure-openai = "^0.4.2"
llama-index-llms-deepseek = "^0.2.2"
llama-index-llms-gemini = "^0.6.1"
llama-index-llms-google-genai = "^0.8.2"
llama-index-llms-huggingface-api = "^0.6.1"
llama-index-llms-mistralai = "^0.9.0"
llama-index-llms-ollama = "^0.9.1"
llama-index-llms-openai = "^0.6.12"
llama-index-llms-openai-like = "^0.5.3"
llama-index-llms-perplexity = "^0.4.1"
llama-index-multi-modal-llms-openai = "^0.6.1"
llama-index-vector-stores-chroma = "^0.5.3"
llama-index-vector-stores-elasticsearch = "0.5.1"
llama-index-vector-stores-qdrant = "^0.8.5"
llama-index-vector-stores-pinecone = "^0.7.1"
llama-index-vector-stores-redis = "^0.6.2"
llama-index-readers-chatgpt-plugin = "^0.4.1"
llama-index-readers-database = "^0.5.1"
llama-index-readers-file = "^0.5.4"
llama-index-readers-github = "^0.8.2"
llama-index-readers-google = "^0.7.2"
llama-index-readers-microsoft-onedrive = "^0.4.1"
llama-index-readers-twitter = "^0.4.1"
llama-index-readers-web = "^0.5.3"
Markdown = "^3.8.2"
mcp = "^1.13.1"
mss = "^9.0.2"
nbconvert = "^7.16.6"
numpy = "1.26.4"
onnxruntime = "1.22.1"
openai = "2.14.0"
openai-agents = "^0.6.4"
opencv-python = "^4.11.0.86"
packaging = "^25.0"
pandas = "2.2.3"
paramiko = "^4.0.0"
pillow = "10.4.0"
pinecone = "^7.0.1"
playwright = "^1.57.0"
psutil = "^7.0.0"
PyAudio = "^0.2.14"
PyAutoGUI = "^0.9.54"
Pygments = "2.19.2"
pydub = "^0.25.1"
pygame = "^2.6.1"
pypdf = "6.1.0"
pynput = "^1.8.1"
pyserial = "^3.5"
PySide6 = "6.9.1"
python-markdown-math = "^0.8"
qasync = "^0.27.1"
redis = "5.3.1"
qt-material = "^2.17"
SpeechRecognition = "^3.14.3"
show-in-file-manager = "^1.1.5"
SQLAlchemy = "2.0.43"
Telethon = "^1.40.0"
tiktoken = "0.11.0"
transformers = "4.56.2"
urllib3 = "2.5.0"
wikipedia = "^1.4.0"
xai-sdk = "^1.5.0"
youtube-transcript-api = "^0.6.3"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.4.0"
pytest = "^7.4.3"

[tool.poetry.scripts]
pygpt = 'pygpt_net.app:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
